--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="remindFoldersStrung">알림 받을 폴더</string>
     <string name="cancelString">cancel</string>
     <string name="saveString">save</string>
+    <string name="dialog_notification">백업하기와 데이터\n불러오기는 이메일\n연동시에만 가능합니다</string>
 </resources>
